Notice (notification): text align => center -- Fix #92

--- a/website/Solidare-IT-g6/app/assets/stylesheets/application.css
+++ b/website/Solidare-IT-g6/app/assets/stylesheets/application.css
@@ -144,6 +144,10 @@ button.dropdown-toggle {
 	padding:20px;
 }
 
+.notice {
+	text-align: center;
+}
+
 footer {
 	margin-top: 30px;
 	height: 300px;
